Fix create-orphanage-btn z-index

--- a/web/src/assets/styles/pages/orphanageMap.css
+++ b/web/src/assets/styles/pages/orphanageMap.css
@@ -6,7 +6,7 @@
 }
 
 #page-map aside {
-    width: 44rem;
+    width: 50rem;
     background: linear-gradient(329.54deg, #15B6D6 0%, #15D6D6 100%);
     padding: 6rem 8rem;
     display: flex;
@@ -49,6 +49,7 @@
 }
 
 #page-map #create-orphanage-btn {
+    z-index: 999;
     position: absolute;
     right: 4rem;
     bottom: 4rem;
